<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_dashboard" />

        <item
            android:id="@+id/nav_omsetharian"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_omset_per_hari" />

        <item
            android:id="@+id/nav_transaksiharian"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_transaksi_per_hari" />

        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_message" />

    </group>
</menu>